# breakform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  Makefile  NOTICE  OPEN-CORE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  wheels.yml
assets/logo/: README.md
bench/: README.md  index.html  results.json  run_bench.py
corpus/: 01-box-ascii.stl  02-box-binary.stl  03-icosphere-sub2-ascii.stl  05-cylinder-16-ascii.stl  06-cylinder-64-ascii.stl  07-cone-ascii.stl  08-torus-ascii.stl  09-lbracket-ascii.stl  10-plate-ascii.stl  11-open-box-ascii.stl  12-degenerate-ascii.stl  13-icosphere-10k-binary.stl  14-sphere-ascii.stl  15-thin-plate-binary.stl  16-lbracket-binary.stl  33-box.step  34-box-large.step  35-cylinder.step  36-sphere.step  37-cone.step  38-torus.step  39-multi-solid-2.step  40-multi-solid-3.step  41-multi-solid-5.step  42-bspline.step  43-assembly.step  44-whitespace.step  45-long-filename.step  46-zz-malformed.step  47-small-box.step  48-box-rotated.step  49-thin-bracket.step  52-crlf.stl  README.md  abaqus-cube.inp  abaqus-truss.inp  bracket.step  cube-ascii.stl  nastran-beam.bdf  nastran-simple.bdf
corpus/openfoam-cavity/constant/: transportProperties
corpus/openfoam-cavity/constant/polyMesh/: boundary  faces  neighbour  owner  points
crates/exl-abaqus/: Cargo.toml
crates/exl-abaqus/src/: lib.rs
crates/exl-arrow/: Cargo.toml
crates/exl-arrow/src/: lib.rs
crates/exl-cli/: Cargo.toml
crates/exl-cli/src/: main.rs
crates/exl-cli/tests/: integration.rs
crates/exl-core/: Cargo.toml
crates/exl-core/src/: lib.rs  units.rs
crates/exl-diff/: Cargo.toml
crates/exl-diff/src/: lib.rs
crates/exl-fmt/: Cargo.toml
crates/exl-fmt/src/: lib.rs  obj.rs  stl.rs
crates/exl-geom/: Cargo.toml
crates/exl-geom/src/: lib.rs
crates/exl-gltf/: Cargo.toml
crates/exl-gltf/src/: lib.rs
crates/exl-io/: Cargo.toml
crates/exl-io/src/: lib.rs
crates/exl-nastran/: Cargo.toml
crates/exl-nastran/src/: lib.rs
crates/exl-openfoam/: Cargo.toml
crates/exl-openfoam/src/: lib.rs
crates/exl-py/: Cargo.toml  README.md  pyproject.toml
crates/exl-py/python/: test_exl.py
crates/exl-py/python/exl/: __init__.py  meshio_bridge.py
crates/exl-py/src/: lib.rs
crates/exl-step/: Cargo.toml
crates/exl-step/src/: lib.rs
crates/exl-validate/: Cargo.toml
crates/exl-validate/src/: lib.rs
docs/: WHITEPAPER.md  python-api.md
docs/decisions/: 0001-brand-and-namespace.md
integrations/: README.md
integrations/freecad/: Init.py  InitGui.py  README.md  UPSTREAM.md  export_exl.py  fidelity_viewer.py  import_exl.py
integrations/gmsh/: README.md  UPSTREAM.md  breakform_gmsh.py  test_gmsh_plugin.py
scripts/: gen_corpus.py
spec/: SPEC.md
