[package]
name = "exl-arrow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exl-geom = { workspace = true }
arrow = { version = "59", default-features = false, features = ["ipc"] }
exl-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
