[package]
name = "exl-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exl-geom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
