[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "breakform"
version = "1.0.0"
description = "Python bindings for Breakform — open engineering-data interop with honest fidelity reports"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/KryptosAI/breakform"
homepage = "https://github.com/KryptosAI/breakform"

[project.optional-dependencies]
meshio = ["meshio"]
gmsh = ["gmsh"]
all = ["meshio", "gmsh"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
